--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ Houston, TX 77019
 
 <section class="wpb-content-wrapper"><div data-vc-full-width="true" data-vc-full-width-init="false" data-vc-stretch-content="true" class="vc_row wpb_row vc_row-fluid vc_row-no-padding un-row-full-width"><div class="container-fluid"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="wpb_revslider_element wpb_content_element">
 			<!-- START Slider 2 REVOLUTION SLIDER 6.5.4 --><p class="rs-p-wp-fix"></p>
-			<rs-module-wrap id="2_wrapper" data-source="gallery" style="visibility:hidden;background:transparent;padding:0;margin:0px auto;margin-top:0;margin-bottom:0;max-width:0;">
+			<rs-module-wrap id="2_wrapper" data-source="gallery" style="visibility:hidden;background:transparent;padding:0;margin:0px auto;margin-top:0;margin-bottom:0;;">
 				<rs-module id="2" style="" data-version="6.5.4">
 					<rs-slides>
 						<rs-slide data-key="rs-4" data-title="Slide" data-anim="ms:600;" data-in="o:0;" data-out="a:false;">
