fixed home herf to index && added blog to nav bar

--- a/what-is-ethane.html
+++ b/what-is-ethane.html
@@ -633,14 +633,14 @@ Houston, TX 77019
 	</div>
 	<div class="site-menu container">
 		<nav id="site-navigation" class="main-nav primary-nav nav">
-			<ul id="menu-primary-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="https://www.americanethane.com/">Home</a></li>
+			<ul id="menu-primary-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3501 current_page_item menu-item-3837 active"><a href="./what-is-ethane.html">What is Ethane</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="./about-us.html">About Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">Market Sectors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4483"><a href="./board-of-directors.html">Board of Directors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">Contact</a></li>
 </ul>		</nav>
-		<div class="mf-header-item-button"><a href="./blog/1.html" class="mf-btn">LATEST NEWS</a></div>	</div>
+		<div class="mf-header-item-button"><a href="./blog1.html" class="mf-btn">LATEST NEWS</a></div>	</div>
 </div>	</header><!-- #masthead -->
 
 	<div class="page-header  parallax has-image">
@@ -722,7 +722,7 @@ Houston, TX 77019
                class="mf-btn mf-btn-widget ">More About Us</a>
 			</div>                    </div>
                                     <div class="footer-sidebar footer-2 col-xs-12 col-sm-6 col-md-4">
-                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">Useful Links</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="https://www.americanethane.com/">Home</a></li>
+                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">Useful Links</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">Home</a></li>
 <li id="menu-item-3837" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3501 current_page_item menu-item-3837"><a href="./what-is-ethane.html" aria-current="page">What is Ethane</a></li>
 <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="./about-us.html">About Us</a></li>
 <li id="menu-item-3736" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">Market Sectors</a></li>
@@ -803,13 +803,13 @@ Houston, TX 77019
         <div class="primary-mobile-nav" id="primary-mobile-nav" role="navigation">
         <div class="mobile-nav-content">
             <a href="#" class="close-canvas-mobile-panel"></a>
-            <ul id="menu-primary-menu-2" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="https://www.americanethane.com/">Home</a></li>
+            <ul id="menu-primary-menu-2" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3501 current_page_item menu-item-3837"><a href="./what-is-ethane.html" aria-current="page">What is Ethane</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="./about-us.html">About Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">Market Sectors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4483"><a href="./board-of-directors.html">Board of Directors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">Contact</a></li>
-</ul>            <div class="mf-header-item-button"><a href="./blog/1.html" class="mf-btn">LATEST NEWS</a></div>        </div>
+</ul>            <div class="mf-header-item-button"><a href="./blog1.html" class="mf-btn">LATEST NEWS</a></div>        </div>
     </div>
         <div id="off-canvas-layer" class="off-canvas-layer"></div>
         <a id="scroll-top" class="backtotop" href="#page-top">
