--- a/index.html
+++ b/index.html
@@ -642,14 +642,14 @@ Houston, TX 77019
 	</div>
 	<div class="site-menu container">
 		<nav id="site-navigation" class="main-nav primary-nav nav">
-			<ul id="menu-primary-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-29 current_page_item menu-item-61 active"><a href="https://www.americanethane.com/">Home</a></li>
+			<ul id="menu-primary-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-29 current_page_item menu-item-61 active"><a href="./index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3837"><a href="./what-is-ethane.html">What is Ethane</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="./about-us.html">About Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">Market Sectors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4483"><a href="./board-of-directors.html">Board of Directors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">Contact</a></li>
 </ul>		</nav>
-		<div class="mf-header-item-button"><a href="./blog/1.html" class="mf-btn">LATEST NEWS</a></div>	</div>
+		<div class="mf-header-item-button"><a href="./blog1.html" class="mf-btn">LATEST NEWS</a></div>	</div>
 </div>	</header><!-- #masthead -->
 
 	
@@ -1294,7 +1294,7 @@ Houston, TX 77019
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">Market Sectors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4483"><a href="./board-of-directors.html">Board of Directors</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">Contact</a></li>
-</ul>            <div class="mf-header-item-button"><a href="./blog/1.html" class="mf-btn">LATEST NEWS</a></div>        </div>
+</ul>            <div class="mf-header-item-button"><a href="./blog1.html" class="mf-btn">LATEST NEWS</a></div>        </div>
     </div>
         <div id="off-canvas-layer" class="off-canvas-layer"></div>
         <a id="scroll-top" class="backtotop" href="#page-top">
