--- a/blog2.html
+++ b/blog2.html
@@ -483,15 +483,17 @@ var whp_local_data = {"add_url":"https:\/\/www.americanethane.com\/wp-admin\/pos
 				<div class="site-extra-text hidden-md hidden-sm hidden-xs">
 					<div id="custom_html-4" class="widget_text widget widget_custom_html"><div class="textwidget custom-html-widget"><div class="header-contact mail">
 <div>
-<h5>EMAIL US AT:</h5>
-contact@americanethane.com
+<h5>EMAIL:</h5>
+contact@americanethane.com.cn
 </div>
 <i class="flaticon-note"></i>
 </div></div></div><div id="custom_html-5" class="widget_text widget widget_custom_html"><div class="textwidget custom-html-widget"><div class="header-contact mail">
 <div>
-<h5>2323 South Shepherd Drive
-Suite 800,</h5>
-Houston, TX 77019
+<h5>电科滨江大厦601室
+龙华东路647号
+,</h5>
+<h5>
+上海市, 黄浦区</h5>
 </div>
 <i class="flaticon-arrow"></i>
 </div></div></div>				</div>
@@ -777,7 +779,7 @@ Houston, TX 77019
 <div class="detail mail">
 	<i class="flaticon-note"></i>
 	<div>
-		<span>Email Us At:</span> contact@americanethane.com
+		<span>EMAIL:</span> contact@americanethane.com.cn
 	</div>
 </div>
 
