--- a/blog2.html
+++ b/blog2.html
@@ -846,7 +846,7 @@ Houston, TX 77019
     </a>
     <script type="text/javascript">!function(t,e){"use strict";function n(){if(!a){a=!0;for(var t=0;t<d.length;t++)d[t].fn.call(window,d[t].ctx);d=[]}}function o(){"complete"===document.readyState&&n()}t=t||"docReady",e=e||window;var d=[],a=!1,c=!1;e[t]=function(t,e){return a?void setTimeout(function(){t(e)},1):(d.push({fn:t,ctx:e}),void("complete"===document.readyState||!document.attachEvent&&"interactive"===document.readyState?setTimeout(n,1):c||(document.addEventListener?(document.addEventListener("DOMContentLoaded",n,!1),window.addEventListener("load",n,!1)):(document.attachEvent("onreadystatechange",o),window.attachEvent("onload",n)),c=!0)))}}("wpBruiserDocReady",window);
 			(function(){var wpbrLoader = (function(){var g=document,b=g.createElement('script'),c=g.scripts[0];b.async=1;b.src='https://www.americanethane.com/?gdbc-client=3.1.43-'+(new Date()).getTime();c.parentNode.insertBefore(b,c);});wpBruiserDocReady(wpbrLoader);window.onunload=function(){};window.addEventListener('pageshow',function(event){if(event.persisted){(typeof window.WPBruiserClient==='undefined')?wpbrLoader():window.WPBruiserClient.requestTokens();}},false);})();
-</script><link rel='stylesheet' id='whp3669tw-bs4.css-css' href='h./csss/tw-bs4.css' type='text/css' media='all' />
+</script><link rel='stylesheet' id='whp3669tw-bs4.css-css' href='./csss/tw-bs4.css' type='text/css' media='all' />
 <link rel='stylesheet' id='whp8262font-awesome.min.css-css' href='./csss/font-awesome.min.css' type='text/css' media='all' />
 <link rel='stylesheet' id='whp8721front.css-css' href='./csss/front.css' type='text/css' media='all' />
 <link rel='stylesheet' id='rs-plugin-settings-css' href='./csss/rs6.css' type='text/css' media='all' />
