--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ Ethane-to-Ethylene Yields Reach 82% in Modern Steam Crackers<br>
 								data-frame_hover="c:#252525;bgc:#f7c02d;boc:#000;bor:3px,3px,3px,3px;bos:solid;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:7;background-color:#f7c02d;font-family:Hind;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</a><!--
 
 							--><a
@@ -632,7 +632,7 @@ Ethane-to-Ethylene Yields Reach 82% in<br> Modern Steam Cackers<br>
 								data-frame_hover="c:#000;bgc:#fff;boc:#000;bor:0px,0px,0px,0px;bos:solid;bow:0,0,0,0;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:11;background-color:#f7c02d;font-family:Roboto;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</rs-layer><!--
 
 							--><rs-layer
@@ -710,7 +710,7 @@ AEC Delivers on CIF Basis Worldwide via Long-Term Take-or-Pay Contracts
 								data-frame_hover="c:#252525;bgc:#f7c02d;boc:#000;bor:3px,3px,3px,3px;bos:solid;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:7;background-color:#f7c02d;font-family:Hind;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</a><!--
 
 							--><a
@@ -804,7 +804,7 @@ AEC Delivers on CIF Basis Worldwide via <br>Long-Term Take-or-Pay Contracts
 								data-frame_hover="c:#000;bgc:#fff;boc:#000;bor:0px,0px,0px,0px;bos:solid;bow:0,0,0,0;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:12;background-color:#f7c02d;font-family:Roboto;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</rs-layer><!--
 -->						</rs-slide>
 						<rs-slide data-key="rs-6" data-title="Slide" data-anim="ms:600;" data-in="o:0;" data-out="a:false;">
@@ -859,7 +859,7 @@ With its low cost, low emissions & high heath<br> value, ethane is tomorrow's fu
 								data-frame_hover="c:#252525;bgc:#f7c02d;boc:#000;bor:3px,3px,3px,3px;bos:solid;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:7;background-color:#f7c02d;font-family:Hind;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</a><!--
 
 							--><a
@@ -899,7 +899,7 @@ Our Solutions
 								data-frame_hover="c:#000;bgc:#fff;boc:#000;bor:0px,0px,0px,0px;bos:solid;bow:0,0,0,0;oX:50;oY:50;sp:0;e:none;"
 								style="z-index:9;background-color:#f7c02d;font-family:Roboto;cursor:pointer;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;"
 							><rs-bg-elem style="position:absolute; top:0px;left:0px;"></rs-bg-elem>
-Our Solutions 
+解决方案 
 							</rs-layer><!--
 
 							--><rs-layer
