translate to chinese

--- a/about-us.html
+++ b/about-us.html
@@ -536,70 +536,66 @@ contact@americanethane.com.cn
 <section class="wpb-content-wrapper"><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 70px"></div><div class="mf_empty_space_md"  style="height: 10px"></div><div class="mf_empty_space_xs"  style="height: 10px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-8"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong><span style="color: #ff9900;">Ethane for Ethylene</span><br />
-</strong>American Ethane was one of the first US companies who signed a major ethane sale contract in China. Since opening a regional office in Shanghai in 2015, AEC has arranged and participated in multiple specialized Conferences, including a first-in-kind ethane-dedicated US-China Clean Energy Conference in Beijing in May 2016 with over 300 delegates from petrochemical companies, chemical research and planning institutes, Government Authorities.</p>
+<p><strong><span style="color: #ff9900;">乙烷用于乙烯</span><br /></strong>美国乙烷公司(AEC)是最早与中国签订大型乙烷销售合同的美国公司之一。自2015年在上海设立区域办事处以来，美国乙烷公司已经安排并参加了多个专业会议，包括2016年5月在北京举办的首届乙烷专题中美清洁能源会议，该会议吸引了来自石化公司、化学研究和规划机构、政府部门的300多名代表。</p>
+		</div>
+	</div>
+
+	<div class="wpb_text_column wpb_content_element " >
+		<div class="wpb_wrapper">
+			<p><strong><span style="color: #ff9900;">AEC签署强有力的合同</span><br />
+</strong>美国乙烷公司已与中国的三个乙烷至乙烯裂解项目签订了有条件的约束性合同，每年供应720万吨乙烷，这将减少中美贸易逆差，并为中国提供可靠的清洁塑料原料来源。<br />
+2017年11月9日，美国乙烷公司和中国南山集团在北京签署了260万吨/年的合同，当时美国总统唐纳德·特朗普和中国国家主席习近平在场。美国乙烷/南山供应合同的签署成为了中美峰会的亮点。<br />
+2017年12月20日，美国乙烷公司与中国辽宁省的赣能重工集团有限公司签署了第二份约束性销售协议，涉及260万吨/年。<br />
+2017年1月30日，美国乙烷公司与中国山西省的阳泉煤业集团签署了第三份约束性销售协议，涉及200万吨/年。</p>
 
 		</div>
 	</div>
 
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong><span style="color: #ff9900;">AEC Signed Binding Ethane Supply Contracts</span><br />
-</strong>American Ethane has conditional binding contracts to supply 7.2 million tons per year of ethane to three ethane-to-ethylene cracker projects in China, which will reduce US-China trade deficit and provide a clean reliable source for plastics to China.<br />
-The contract for 2.6 mtpa was signed by American Ethane and Nanshan Group (China) on November 9, 2017 in Beijing in the presence of President Donald Trump and President Xi Jinping. The signing of the American Ethane/Nanshan supply contract was the highlight of the U.S./China Summit.<br />
-On December 20, 2017 American Ethane signed the 2nd binding SPA for 2.6 mtpa with Ganergy Heavy Industry Group Co., Ltd from Liaoning Province, China.<br />
-On January 30, 2017 American Ethane signed the 3rd binding SPA for 2.0 mtpa with Yangquan Coal Group from Shanxi province, China.</p>
+			<p><strong><span style="color: #ff9900;">AEC已完成前期工程设计</span><br />
+</strong>
+美国乙烷公司已完成前期工程设计（FEED）工作，并确定了美国乙烷出口终端的成本和范围，该终端位于德克萨斯州内切斯河，年产能为1000万公吨LEG，设有4列每日12万桶的装置，一个80万桶液态乙烷储罐和2个VLEC码头，以满足亚洲多个下游客户的规模灵活性要求。FEED研究分别由两家大型EPC公司S&B承包商和工程师（先前建造了几个乙烷和丙烷终端）以及AMEC Foster Wheeler独立完成。他们提议采用Black & Veatch和GE Oil & Gas的乙烷制冷技术。</p>
 
 		</div>
 	</div>
 
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong><span style="color: #ff9900;">AEC has Completed FEED</span><br />
-</strong>American Ethane has completed front end engineering design (FEED) work and determined cost and scope of the U.S. ethane export terminal with annual capacity of 10 million metric tons of LEG at Neches River location in Texas, with 4 trains of 120,000 bbl\d each, one 800,000 bbl liquid ethane storage tank and 2xVLEC docks for the flexibility of scale to meet the requirements of several downstream customers in Asia. FEED study was performed independently by two major EPC firms &#8211; S&amp;B Contractors and Engineers (previously built several ethane and propane terminals) and AMEC Foster Wheeler. They proposed Black &amp; Veach and GE Oil &amp; Gas ethane refrigeration technologies.</p>
-
+			<p><strong><span style="color: #ff9900;">AEC保证按CIF条款交付乙烷</span><br />
+			</strong>美国乙烷供应合同要求AEC保证整个乙烷供应，并按照CIF条款将乙烷一路运送到中国。在过去四年里，AEC与来自中国、新加坡、欧洲和日本的世界领先船东共同制定了航运条款和战略。乙烯将通过新建的93,000-96,000立方米的VLEC运送。</p>
 		</div>
 	</div>
 
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong><span style="color: #ff9900;">AEC Guarantees Delivery of Ethane on CIF Terms</span><br />
-</strong>American Ethane supply contracts obligates AEC to guarantee the entire ethane supply and delivery all the way to China on CIF terms. In the last four years AEC’s has jointly developed shipping terms and strategy with a group of the World’s leading ship-owners from China, Singapore, Europe, and Japan. Ethene would be delivered in new-built VLEC of 93,000-96,000m3.</p>
-
+			<p><strong><span style="color: #ff9900;">乙烷发电</span><br />
+			</strong>2015年，AEC与GE Power签订了一项联合开发协议，旨在全球范围内，特别是在能源短缺的印度、孟加拉国和斯里兰卡推广乙烷发电概念。AEC与GE联合推广乙烷用于大型CCGT电厂，利用GE最新9H级燃气轮机的较高燃料效率，优于煤炭和其他燃料。由于基础设施成本较低，液化乙烷气（LEG）的每千瓦时价格比LNG更具吸引力。<br />
+			自2016年起，GE正在孟加拉国开发一座2400兆瓦的发电厂，该厂使用GE Power最新一代9HA燃气轮机，效率超过60%，AEC将根据为期22年的购电协议，独家供应250万吨乙烷。</p>
+						
 		</div>
 	</div>
-
+</div></div></div><div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_tta-container" data-vc-action="collapse"><div class="vc_general vc_tta vc_tta-accordion vc_tta-color-orange vc_tta-style-modern vc_tta-shape-square vc_tta-spacing-4 vc_tta-gap-4 vc_tta-controls-align-center vc_custom_1524437918690"><div class="vc_tta-panels-container"><div class="vc_tta-panels"><div class="vc_tta-panel" id="1508747151686-14cd83fe-86c0" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747151686-14cd83fe-86c0" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">我们的任务</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong><span style="color: #ff9900;">Ethane for Power</span><br />
-</strong>In 2015 AEC and GE Power entered into a joint-development agreement to promote ethane-to-power concept worldwide and specifically in energy deficient India, Bangladesh and Sri-Lanka. AEC and GE are jointly marketing ethane for large-scale CCGT plants to take advantage over coal and other fuels due to higher fuel efficiency on GE’s latest Gas Turbine of 9H class. Liquefied Ethane Gas (LEG) was more attractive than LNG on per kWh price due to lower infrastructure costs.<br />
-Since 2016 GE is developing a 2400 MW power plant in Bangladesh using GE Power’s latest generation 9HA gas turbine engines with efficiency exceeding 60%, for which AEC would exclusively supply 2.5 million tons of ethane under a 22-year power purchase agreement.</p>
-
+			<p>我们的使命是通过长期可靠的合同，向全球客户提供美国来源的乙烷气。</p>
 		</div>
 	</div>
-</div></div></div><div class="wpb_column vc_column_container vc_col-sm-4"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="vc_tta-container" data-vc-action="collapse"><div class="vc_general vc_tta vc_tta-accordion vc_tta-color-orange vc_tta-style-modern vc_tta-shape-square vc_tta-spacing-4 vc_tta-gap-4 vc_tta-controls-align-center vc_custom_1524437918690"><div class="vc_tta-panels-container"><div class="vc_tta-panels"><div class="vc_tta-panel" id="1508747151686-14cd83fe-86c0" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747151686-14cd83fe-86c0" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">Our Mission</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
+</div></div><div class="vc_tta-panel vc_active" id="1508747188911-376a52e4-45e9" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747188911-376a52e4-45e9" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">我们的愿景</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Our mission is to deliver US-sourced ethane gas to our customers globally on long-term reliable contracts.</p>
-
+			<p>尽管乙烷已经作为石化工业的原料使用了几十年，但美国乙烷公司是最早认识到乙烷作为下一代发电燃料潜力的公司之一。在2010年代初的美国页岩革命之初，我们的股东预见到了美国乙烷的丰富和过剩以及出口至海外用于发电和石化产品的机会。作为我们的愿景和战略的一部分，2015年我们在上海（中国）和达卡（孟加拉国）设立了办事处，以满足亚洲地区数百万人对价格适中的原料和能源的需求。</p>
 		</div>
 	</div>
-</div></div><div class="vc_tta-panel vc_active" id="1508747188911-376a52e4-45e9" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747188911-376a52e4-45e9" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">Our Vision</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
-	<div class="wpb_text_column wpb_content_element " >
-		<div class="wpb_wrapper">
-			<p>Although ethane was used for decades as a feedstock for petrochemical industry, American Ethane was one of the first companies who realized potential of ethane as next fuel for power generation. In the beginning of US Shale Revolution in early 2010s, our shareholders envisioned the abundance and oversupply of ethane in the USA and the opportunities to export it overseas for power and petrochemicals. As part of our vision and strategy, in 2015 we opened offices Shanghai (China) and Dhaka (Bangladesh) to serve the growing demand for affordable feedstock and source of power for millions of people in the Asian region.</p>
-
-		</div>
-	</div>
-</div></div><div class="vc_tta-panel" id="1508747186558-5a68f830-d129" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747186558-5a68f830-d129" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">Advantages of Ethane</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
+</div></div><div class="vc_tta-panel" id="1508747186558-5a68f830-d129" data-vc-content=".vc_tta-panel-body"><div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title vc_tta-controls-icon-position-left"><a href="#1508747186558-5a68f830-d129" data-vc-accordion data-vc-container=".vc_tta-container"><span class="vc_tta-title-text">乙烷的优势</span><i class="vc_tta-controls-icon vc_tta-controls-icon-chevron"></i></a></h4></div><div class="vc_tta-panel-body">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
 			<ul style="list-style-type: square;">
-<li>Ethane is the preferred stock for ethylene production with the highest yield of up to 82% in modern ethane-to-ethylene steam crackers.</li>
-<li>In some markets with lack of infrastructure or limitation of capacity, Ethane is more affordable than LNG for power generation due to cheaper liquefaction, transportation and regasification costs.</li>
-<li>LEG is more feasible than LNG for power generation due to its price formula structure, unlinked from crude oil prices<br />
-American ethane provides long-term supply from reliable sources via controlled supply chain, so the customer is assured of the ethane supply to its steam cracker or power plant.</li>
-</ul>
+				<li>乙烷是乙烯生产的首选原料，在现代乙烷至乙烯裂解装置中，收率最高可达82%。</li>
+				<li>在一些基础设施不足或容量受限的市场，由于液化、运输和再气化成本较低，乙烷发电的成本比液化天然气更低。</li>
+				<li>由于价格公式结构与原油价格脱钩，液化乙烷气（LEG）用于发电比液化天然气（LNG）更具可行性。<br />
+				美国乙烷公司通过受控供应链，提供来自可靠来源的长期供应，因此客户可以确保获得乙烷以供应其裂解装置或发电厂。</li>
+				</ul>
 
 		</div>
 	</div>
@@ -644,7 +640,7 @@ American ethane provides long-term supply from reliable sources via controlled s
                class="mf-btn mf-btn-widget ">了解更多</a>
 			</div>                    </div>
                                     <div class="footer-sidebar footer-2 col-xs-12 col-sm-6 col-md-4">
-                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">Useful Links</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">首页</a></li>
+                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">网页导航</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">首页</a></li>
 <li id="menu-item-3837" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3837"><a href="./what-is-ethane.html">乙烷简介</a></li>
 <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-32 current_page_item menu-item-58"><a href="./about-us.html" aria-current="page">乙烷简介</a></li>
 <li id="menu-item-3736" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">市场介绍</a></li>
@@ -652,7 +648,7 @@ American ethane provides long-term supply from reliable sources via controlled s
 <li id="menu-item-57" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">联系我们</a></li>
 </ul></div></div><div class="clear"></div></div></div>                    </div>
                                     <div class="footer-sidebar footer-3 col-xs-12 col-sm-6 col-md-4">
-                        <div id="custom_html-8" class="widget_text widget widget_custom_html"><h4 class="widget-title">Contact Details</h4><div class="textwidget custom-html-widget"><div class="footer-widget-contact">
+                        <div id="custom_html-8" class="widget_text widget widget_custom_html"><h4 class="widget-title">联系方式</h4><div class="textwidget custom-html-widget"><div class="footer-widget-contact">
 
 <div class="detail address">
 	<i class="flaticon-arrow"></i>
