--- a/blog6.html
+++ b/blog6.html
@@ -594,7 +594,7 @@ contact@americanethane.com.cn
                class="mf-btn mf-btn-widget ">了解更多</a>
 			</div>                    </div>
                                     <div class="footer-sidebar footer-2 col-xs-12 col-sm-6 col-md-4">
-                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">Useful Links</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">首页</a></li>
+                        <div id="mf-custom-menu-1" class="widget widget_mf-custom-menu"><h4 class="widget-title">网页导航</h4><div class="custom-menu-area"><div class="custom-menu custom-menu-1"><div class="menu-primary-menu-container"><ul id="menu-primary-menu-1" class="menu"><li id="menu-item-61" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-61"><a href="./index.html">首页</a></li>
 <li id="menu-item-3837" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3837"><a href="./what-is-ethane.html">乙烷简介</a></li>
 <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58"><a href="./about-us.html">乙烷简介</a></li>
 <li id="menu-item-3736" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3736"><a href="./market-sectors.html">市场介绍</a></li>
@@ -602,7 +602,7 @@ contact@americanethane.com.cn
 <li id="menu-item-57" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-57"><a href="./contact.html">联系我们</a></li>
 </ul></div></div><div class="clear"></div></div></div>                    </div>
                                     <div class="footer-sidebar footer-3 col-xs-12 col-sm-6 col-md-4">
-                        <div id="custom_html-8" class="widget_text widget widget_custom_html"><h4 class="widget-title">Contact Details</h4><div class="textwidget custom-html-widget"><div class="footer-widget-contact">
+                        <div id="custom_html-8" class="widget_text widget widget_custom_html"><h4 class="widget-title">联系方式</h4><div class="textwidget custom-html-widget"><div class="footer-widget-contact">
 
 <div class="detail address">
 	<i class="flaticon-arrow"></i>
