--- a/blog5.html
+++ b/blog5.html
@@ -458,7 +458,7 @@ var whp_local_data = {"add_url":"https:\/\/www.americanethane.com\/wp-admin\/pos
 		<div class="container">
 			
 				<div class="topbar-left topbar-widgets text-left clearfix">
-					<div id="custom_html-3" class="widget_text widget widget_custom_html"><div class="textwidget custom-html-widget"><div><i class="flaticon-sign main-color" style="padding-right: 10px;"></i>We Are The Leading Provider Of Ethane Gas.</div></div></div>				</div>
+					<div id="custom_html-3" class="widget_text widget widget_custom_html"><div class="textwidget custom-html-widget"><div><i class="flaticon-sign main-color" style="padding-right: 10px;"></i>我们是乙烷的领先供应商。</div></div></div>				</div>
 
 			
 			
